--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "url-shortener-app",
   "version": "0.1.0",
   "private": true,
-  "proxy" : "http://localhost:5000",
+  "proxy" : "https://url-shortener-backend-szjh.onrender.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
